3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Various updates:
NOTE - You need to install the updated archetypes (included below)
   if you run this code without the updated archs, you will likely find
   many things do not work.
acinclude.m4 aclocal.m4 configure: more refinements for libpython detection.
common/button.c: Two push_button() changes - have it check for ACTIVATE_ON_
    PUSH/RELEASE to determine if the object should get activated.  Also,
    change behaviour of TIMED_GATE so that multipart timed gates work.
common/loader.l, loader.c: Update with acttivate_on_push/release
doc/Developers/objects: Add notes about how to add flags to objects.
include/define.h: add new FLAG_ values
include/win32.h: update by pstolarc so it compiles on Win32.
lib/archetypes: rebuilt
MSW 2002-09-17

common/map.c:  Fix problem with ordering in check_linked() - checking
   for NO_PASS was before checks for inventory checkers, resulting in
   inventory checkers that require the player to have an item not working.
MSW 2002-09-15


------------------------------------------------------------------------------
Changes for 1.4.0:

server/disease.c: Change move_disease() somehwat - before, if you were
   not susceptible to a disease, it would never run its course.  Yet you
   would still get stuck with the symptoms.  there was a case on
   metalforge where a character had a symptom with no disease, and
   had immunity, yet was still getting stuck with the symptoms.  Not sure
   if this change will help prevent that in the future or not.
include/player.h: Change item_power in player structure to be 16 bits -
   8 bit values were getting overflowed.
MSW 2002-09-14
